--- a/index.html
+++ b/index.html
@@ -1,14 +1,22 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/piano.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Marc Blandel - Pianiste et Compositeur. Découvrez ses compositions et concerts." />
     <title>Marc Blandel | Pianiste & Compositeur</title>
   </head>
   <body>
     <div id="root"></div>
+
+    <!-- FORMULAIRE CACHÉ POUR NETLIFY FORMS -->
+    <!-- Ce formulaire ne s'affiche jamais, il sert juste à la détection par Netlify -->
+    <form name="contact" netlify netlify-honeypot="bot-field" hidden>
+      <input type="text" name="name" />
+      <input type="email" name="email" />
+      <textarea name="message"></textarea>
+    </form>
+
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
